# privateAgent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  security.md  threat-model.md
scripts/: start_telegram_bot.ps1  start_telegram_bot.sh  status_telegram_bot.ps1  status_telegram_bot.sh  stop_telegram_bot.ps1  stop_telegram_bot.sh
src/private_agent/: __init__.py  app.py  bootstrap_telegram.py  run_telegram.py  version.py
src/private_agent/agent/: __init__.py  service.py
src/private_agent/audit/: __init__.py  logger.py  model_logger.py
src/private_agent/auth/: __init__.py  allowlist.py
src/private_agent/config/: settings.py
src/private_agent/executor/: __init__.py  runtime.py
src/private_agent/knowledge/: __init__.py  base.py
src/private_agent/models/: __init__.py  base.py  deepseek_cloud.py  mock.py
src/private_agent/models/skills/telegram-query-routing/: SKILL.md
src/private_agent/policy/: engine.py
src/private_agent/scheduler/: __init__.py
src/private_agent/storage/: __init__.py  state.py
src/private_agent/sync/: __init__.py  server.py
src/private_agent/tools/: __init__.py  base.py  builtin.py
src/private_agent/transport/: __init__.py  commands.py  telegram.py  types.py
tests/: test_agent_flow.py  test_auth.py  test_commands.py  test_knowledge.py  test_model_prompt.py  test_policy.py  test_sync.py  test_tools.py  test_version.py
